--- a/supplier/templates/supplier/pages/register.html
+++ b/supplier/templates/supplier/pages/register.html
@@ -23,7 +23,7 @@
                 <input type="text" placeholder="CEP" name="cep" id="cep">
                 <input type="text" placeholder="Estado" name="estado" id="estado">
                 
-                <button type="submit">Enviar</button>
+                <button type="submit">Salvar</button>
             </form>
         </div>
         
