--- a/sale/templates/sales/pages/sales.html
+++ b/sale/templates/sales/pages/sales.html
@@ -6,11 +6,8 @@
     </header>
 
     <main>
-        <div class="container">
-            <div class="sub_menu">
-                <a href="/sales"><button>Painel</button></a>
-                <a href="/sales/searchsales"><button>Consultar Vendas</button></a>
-            </div>
+        <div class="content">
+           
 
             <h1>NOVA VENDA</h1>
 
@@ -102,8 +99,6 @@
                 <button class="styled-button">Cancelar</button>
             </div>
         </div>
-
-        
     </main>
 
     <style>
@@ -113,37 +108,34 @@
         }
 
         header {
-            position: fixed; /* Fixa a barra de navegação no topo */
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
-            background-color: #007bff; /* Cor de fundo da barra */
+            background-color: #007bff;
             padding: 1em;
-            color: white; /* Cor do texto */
+            color: white;
             text-align: center;
-            z-index: 1000; /* Garante que fique acima de outros elementos */
+            z-index: 1000;
         }
 
         main {
-            display: flex; /* Usa flexbox para centralizar */
-            justify-content: center; /* Centraliza horizontalmente */
-            min-height: calc(100vh - 80px); /* Altura mínima, ajustando para a barra de navegação */
-            margin: 120px auto 0; /* Aumenta o espaço acima do main */
-            width: 80%; /* Define a largura do main */
+            display: flex;
+            justify-content: center;
+            min-height: calc(100vh - 80px);
+            margin: 120px auto 0;
+            width: 80%;
         }
 
-        .container {
-            width: 100%; /* Largura total para o container */
+        .content {
+            width: 100%;
             display: flex;
             flex-direction: column;
-            align-items: center; /* Centraliza itens no container */
+            align-items: center;
         }
 
-        .sub_menu {
-            display: flex;
-            gap: 5px; /* Espaçamento entre os botões */
-            margin-bottom: 20px; /* Espaço abaixo do menu */
-        }
+        
+
         .sub_menu button {
             padding: 0.7em 1.5em;
             background-color: #007bff;
@@ -154,28 +146,14 @@
             cursor: pointer;
             transition: background-color 0.3s;
         }
+
         .sub_menu button:hover{
-            background-color: #0056b3
-        }
-
-        .styled-button {
-            padding: 0.7em 1.5em;
-            background-color: #007bff;
-            color: white;
-            font-weight: bold;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .styled-button:hover {
             background-color: #0056b3;
         }
 
         h1 {
             font-size: 2em;
-            margin: 0.5em 0; /* Margens uniformes */
+            margin: 0.5em 0;
             text-align: center;
         }
 
@@ -203,7 +181,7 @@
         }
 
         .response-message {
-            color: green; /* ou red para erros */
+            color: green;
             font-weight: bold;
         }
 
@@ -233,8 +211,6 @@
             width: 12em;
         }
 
-       
-
         .icons {
             width: 2em;
             margin-left: 2em;
@@ -245,6 +221,21 @@
             align-items: center;
             justify-content: center;
             gap: 1em;
+        }
+
+        .styled-button {
+            padding: 0.7em 1.5em;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .styled-button:hover {
+            background-color: #0056b3;
         }
     </style>
 
