--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -48,7 +48,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/nfe/new-nfe/">Entrada de NF-e</a>
               <a class="dropdown-item" href="/nfe/searchnfe/">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -58,7 +58,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/new_payment">Cadastrar</a>
               <a class="dropdown-item" href="#">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -68,7 +68,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/recieve/payment">Receber</a>
               <a class="dropdown-item" href="receive/searchreceive">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -77,8 +77,8 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/supplier/register/">Cadastrar</a>
-              <a class="dropdown-item" href="#">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              <a class="dropdown-item" href="/supplier">Consultar</a>
+              
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -88,7 +88,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/stock/new_product/">Cadastrar Produto</a>
               <a class="dropdown-item" href="#">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+             
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -98,7 +98,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/sale/new-sale">Efetuar Venda</a>
               <a class="dropdown-item" href="sales/searchsales">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              
             </div>
           </li>
       </ul>
