--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -66,9 +66,7 @@
               Contas a Receber
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/recieve/payment">Receber</a>
-              <a class="dropdown-item" href="receive/searchreceive">Consultar</a>
-              <a class="dropdown-item" href="#">Editar</a>
+              <a class="dropdown-item" href="/receive/clientes-pendentes/">Consultar</a>
             </div>
           </li>
           <li class="nav-item dropdown">
