--- a/stock/templates/stock/pages/edit_product.html
+++ b/stock/templates/stock/pages/edit_product.html
@@ -15,6 +15,17 @@
             margin: 0;
             background-color: #f4f4f9;
         }
+        header {
+            position: fixed; /* Fixa a barra de navegação no topo */
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: #007bff; /* Cor de fundo da barra */
+            padding: 1em;
+            color: white; /* Cor do texto */
+            text-align: center;
+            z-index: 1000; /* Garante que fique acima de outros elementos */
+        }
 
         .container {
             width: 80%;
@@ -92,6 +103,9 @@
     </style>
 </head>
 <body>
+    <header>
+        {% include "global/partials/header.html" %}
+    </header>
     <div class="container">
         <h1>Editar Produto</h1>
         <form method="post">
