--- a/receive/templates/receive/pages/clientes_pendentes.html
+++ b/receive/templates/receive/pages/clientes_pendentes.html
@@ -6,6 +6,7 @@
     <title>Clientes com Pagamento Pendente</title>
 </head>
 <body>
+    {% include "global/partials/header.html" %}
     <h1>Clientes com Pagamento Pendente</h1>
 
     <table border="1">
