--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -57,7 +57,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/new_payment">Cadastrar</a>
-              <a class="dropdown-item" href="#">Consultar</a>
+              <a class="dropdown-item" href="/search_payment/">Consultar</a>
               
             </div>
           </li>
@@ -96,7 +96,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/sale/new-sale">Efetuar Venda</a>
-              <a class="dropdown-item" href="sales/searchsales">Consultar</a>
+              <a class="dropdown-item" href="/sales/searchsales">Consultar</a>
               
             </div>
           </li>
